--- a/2. CSS/5. 박스모델/2. 박스속성/8. 종합실습.html
+++ b/2. CSS/5. 박스모델/2. 박스속성/8. 종합실습.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!-- reset css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+
     <style>
 
         section {
@@ -18,9 +21,11 @@
 
         section h1 {
             font-size: 18px;
+            font-weight: bold;
             text-align: center;
             border-bottom: 3px solid #123456;
             background: #abcdef;
+            padding: 15px 0;
             margin: 0;            
         }
 
