--- a/2. CSS/5. 박스모델/2. 박스속성/6. display.html
+++ b/2. CSS/5. 박스모델/2. 박스속성/6. display.html
@@ -22,14 +22,19 @@
             background: green; 
         }
 
-        div {
-            width: 300px;
-            height: 300px;
+        .box {
+            width: 100px;
+            height: 40px;
             background: skyblue;
         }
         
         .box > input:nth-child(2) {
             display: none;
+        }
+
+        .hide {
+            /* display: none;*/
+            opacity: 0;
         }
 
     </style>
